# openai-to-api

./: .env  Cargo.toml  README.md  docker-compose.yml
db/: init.sql
interactions/: 2-with-db-negotiating-format.csv  3-actual-memories-saved.md
src/: chat_context.rs  chat_gpt.rs  db.rs  db_log.rs  frontal_lobe.rs  main.rs  memory.rs  test1.rs
