[package]
name = "openai-to-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["std"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["std", "derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
